--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,16 @@ body {
 
 #content {
   padding: 20px;
-  background: rgba(255,255,255,.85);
+  background: rgba(170, 4, 248, 0.85);
 }
 
 h1, h2 {
-  font-family: 'Gabriela', serif;
+  font-family: system-ui;
   color: #fff;
 }
 
 h1 {
-  font-size: 3.5em;
+  font-size: 4.0em;
   margin-bottom: 0;
 }
 
@@ -52,7 +52,7 @@ img {
 }
 
 p {
-  font-size: 1em;
+  font-size: 10%;
 }
 
 a {
